# Online-cinema-project

./: .coverage  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  test.db
src/: main.py
src/auth/: models.py  router.py  schemas.py  service.py
src/cart/: models.py  router.py  schemas.py  service.py
src/core/: config.py  database.py  dependencies.py  security.py  seed.py
src/favorites/: models.py  router.py  schemas.py  service.py
src/movies/: models.py  router.py  schemas.py  service.py
src/orders/: models.py  router.py  schemas.py  service.py
src/reactions/: models.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/integration/: test_auth.py  test_cart.py  test_favorites.py  test_movies.py  test_orders.py  test_reactions.py
tests/unit/: test_security.py
